# chapel-gpu

./: .buildinfo  CMakeLists.txt  LICENSE  Mason.toml  README.md  genindex.html  index.html  objects.inv  search.html  searchindex.js
.github/workflows/: ci.yml
_sources/: index.rst.txt
_sources/api/: gpuapi.rst.txt
_sources/details/: gpuapi.rst.txt  gpuiterator.rst.txt
_sources/history/: evolution.rst.txt
_sources/instructions/: build.rst.txt  guide.rst.txt  mid-low.rst.txt  write.rst.txt
api/: gpuapi.html  gpuiterator.html
apps/: BuildGPUCode.cmake  Makefile
apps/blackscholes/: CMakeLists.txt  Makefile  bs.baseline.chpl  bs.cl  bs.cu  bs.gpu.chpl  bs.h  bs.hybrid.chpl  bs.hybrid.dist.chpl  bs.hybrid.dist.explicit.chpl  bs.hybrid.dist.lowmid.chpl  bs.hybrid.dist.mid.chpl  bs.hybrid.dist.midlow.chpl  bs.kernel.cu  bs.kernel.h  bs.lsf  bs.opencl.c  po.slurm
apps/logisticregression/: CMakeLists.txt  Makefile  lr.baseline.chpl  lr.cl  lr.cu  lr.gpu.chpl  lr.h  lr.hybrid.chpl  lr.hybrid.dist.chpl  lr.hybrid.dist.explicit.chpl  lr.hybrid.dist.lowmid.chpl  lr.hybrid.dist.mid.chpl  lr.hybrid.dist.midlow.chpl  lr.kernel.cu  lr.kernel.h  lr.lsf  lr.opencl.c  po.slurm
apps/mm/: CMakeLists.txt  Makefile  m.cu  mm.baseline.chpl  mm.blas.chpl  mm.cl  mm.cu  mm.gpu.chpl  mm.h  mm.hybrid.chpl  mm.hybrid.dist.chpl  mm.hybrid.dist.explicit.chpl  mm.hybrid.dist.lowmid.chpl  mm.hybrid.dist.mid.chpl  mm.hybrid.dist.midlow.chpl  mm.kernel.cu  mm.kernel.h  mm.lsf  mm.opencl.c  po.slurm
apps/pagerank/: CMakeLists.txt  Makefile  pagerank.baseline.chpl  pagerank.cu  pagerank.gpu.chpl  pagerank.h  pagerank.hybrid.chpl
apps/stream/: CMakeLists.txt  Makefile  po.slurm  stream.baseline.chpl  stream.cl  stream.cu  stream.gpu.chpl  stream.h  stream.hybrid.chpl  stream.hybrid.dist.chpl  stream.hybrid.dist.explicit.chpl  stream.hybrid.dist.lowmid.chpl  stream.hybrid.dist.mid.chpl  stream.hybrid.dist.midlow.chpl  stream.kernel.cu  stream.kernel.h  stream.lsf  stream.opencl.c
apps/vector_copy/: CMakeLists.txt  Makefile  po.slurm  vc.baseline.chpl  vc.cl  vc.cu  vc.gpu.chpl  vc.h  vc.hybrid.chpl  vc.hybrid.dist.chpl  vc.hybrid.dist.explicit.chpl  vc.hybrid.dist.explicit.mid.chpl  vc.hybrid.dist.lowmid.chpl  vc.hybrid.dist.mid.chpl  vc.hybrid.dist.midlow.chpl  vc.kernel.cu  vc.kernel.h  vc.lsf  vc.opencl.c
cmake/: BuildGPUCode.cmake  env.sh.in
details/: gpuapi.html  gpuiterator.html
doc/: Makefile  requirements.txt
doc/rst/: conf.py  index.rst
doc/rst/api/: gpuapi.rst  gpuiterator.rst
doc/rst/details/: gpuapi.rst
doc/rst/history/: evolution.rst
doc/rst/instructions/: build.rst  compile.rst  guide.rst  low.rst  mid-low.rst  mid.rst  write.rst
doctrees/: environment.pickle  index.doctree
doctrees/api/: gpuapi.doctree  gpuiterator.doctree
doctrees/details/: gpuapi.doctree  gpuiterator.doctree
doctrees/history/: evolution.doctree
doctrees/instructions/: build.doctree  compile.doctree  guide.doctree  low-mid.doctree  low.doctree  mid.doctree  write.doctree
example/: CMakeLists.txt  Makefile  vc.chpl  vc.cu  vc.h  vc.opencl.c
example/gpuapi/: BuildGPUCode.cmake  Makefile
example/gpuapi/1d/: 1d.chpl  1d.kernel.cu  1d.kernel.h  CMakeLists.txt  Makefile
example/gpuapi/2d/: 2d.chpl  2d.kernel.cu  2d.kernel.h  CMakeLists.txt  Makefile
example/gpuapi/async/: CMakeLists.txt  Makefile  async.chpl  async.kernel.cu  async.kernel.h
example/gpuapi/gpuAddNums/: Makefile  gpuAddNums.chpl
example/gpuapi/jagged/: CMakeLists.txt  Makefile  jagged.chpl  jagged.kernel.cu  jagged.kernel.h
example/gpuapi/pitched2d/: CMakeLists.txt  Makefile  pitched2d.chpl  pitched2d.kernel.cu  pitched2d.kernel.h
history/: evolution.html
html/: objects.inv  search.html  searchindex.js
html/_sources/: index.rst.txt
html/_sources/history/: evolution.rst.txt
html/_sources/instructions/: low-mid.rst.txt
html/api/: gpuiterator.html
html/details/: gpuapi.html  gpuiterator.html
html/instructions/: build.html  compile.html  guide.html  low-mid.html  low.html  mid.html  write.html
instructions/: build.html  compile.html  guide.html  low-mid.html  low.html  mid-low.html  mid.html  write.html
modules/: GPUIterator.chpl
src/: DynGPUIterator.chpl  GPUAPI.chpl  GPUAPI.cu  GPUAPI.h  GPUAPI.opencl.c  GPUIterator.chpl  lambda.h
test/: DynGPUIteratorDomainTest.chpl  DynGPUIteratorRangeTest.chpl  GPUIteratorDomainTest.chpl  GPUIteratorDomainZipTest.chpl  GPUIteratorRangeTest.chpl  GPUIteratorZipTest.chpl
